--- a/GenshinImpactRollBot/GenshinImpactRollBot.csproj
+++ b/GenshinImpactRollBot/GenshinImpactRollBot.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0-rc1" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc1" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.0.0-rc1" />
   </ItemGroup>
 
 </Project>
